--- a/style.css
+++ b/style.css
@@ -145,6 +145,17 @@ form button:hover {
     color: green;
 }
 
+.mensagem-ok {
+  color: green;
+  font-weight: bold;
+  background-color: #e6ffe6;
+  padding: 12px 16px;
+  border: 1px solid #b2ffb2;
+  border-radius: 6px;
+  margin-top: 20px;
+}
+
+
 @media (max-width: 600px) {
     nav a {
         display: block;
